--- a/css/top.css
+++ b/css/top.css
@@ -2,7 +2,7 @@
 
 body {
     --swiper-navigation-size: 0px;
-    font-family: 'meiryo';
+    font-family: 'meiryo',cursive;
     font-size: 18px;
 }
 
