ファビコン強制適用(VScode),PC用css不要行削除

--- a/css/top.css
+++ b/css/top.css
@@ -709,22 +709,26 @@ td {
 }
 
 /* NGなら赤くする */
-.form-input:focus:invalid ,.message-input:focus:invalid {
+.form-input:focus:invalid,
+.message-input:focus:invalid {
     border: tomato 2px solid;
 }
 
 /* 操作中、入力値が正しい場合は、不正エラーを消す */
-.form-input:focus:valid + .error .invalid ,.message-input:focus:valid + .error .invalid{
+.form-input:focus:valid+.error .invalid,
+.message-input:focus:valid+.error .invalid {
     display: none;
 }
 
 /* OKなら、その他のテキストボックス以外を緑にする */
-.form-input:focus:valid ,.message-input:focus:valid {
+.form-input:focus:valid,
+.message-input:focus:valid {
     border: seagreen 2px solid;
 }
 
-input::placeholder,textarea::placeholder{
-    color:#555;
+input::placeholder,
+textarea::placeholder {
+    color: #555;
 }
 
 /* /フォーム */
@@ -891,6 +895,8 @@ input::placeholder,textarea::placeholder{
     }
 }
 
+/* PC */
+
 @media screen and (min-width:880px) {
 
     /* 共通 */
@@ -901,68 +907,26 @@ input::placeholder,textarea::placeholder{
     .margin {
         margin-left: 25px;
         margin-right: 25px;
-        /* margin:auto; */
-    }
-
-
-
-    .contents {
-        display: flex;
-        flex-flow: column;
-        margin: auto;
-        max-width: 1425px;
-        /* align-items: flex-start; */
-    }
-
-    .container {
-        font-size: 40px;
-        text-decoration: underline;
-        text-align: center;
-        /* margin-top: 50px; */
-        margin-bottom: 50px;
     }
 
     /* /共通 */
+
     /* ヘッダー */
     .header {
         height: 100px;
-        /* 縦方向の並び順*/
-        /*
-        flex-start：上揃え（デフォルト）
-        flex-end：下揃え
-        center：中央揃え
-        baseline：ベースライン
-        stretch：伸縮
-        */
-        align-items: center;
         margin-left: 25px;
         margin-right: 25px;
     }
-
-    @import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
-
-    .logo {}
 
     .logo_text {
         font-size: 100px;
     }
 
-    .menu {
-        margin-left: auto;
-    }
-
     ul.navi {
-        gap:50px;
-    }
-
-    li.item {
-        /* width: 140px; */
-        text-align: center;
+        gap: 50px;
     }
 
     li.item>a {
-        text-decoration: none;
-        color: dimgray;
         font-size: 20px;
         z-index: 100;
     }
@@ -973,72 +937,24 @@ input::placeholder,textarea::placeholder{
     }
 
     /* /ヘッダー */
+
     /* top */
-    .top_area {
-        position: relative;
-        padding: 0;
-    }
-
-    .top_img {
-        width: 100%;
-    }
-
     .top_text {
         font-size: 50px;
     }
 
     /* /top */
+
     /* logo_bar */
-    .wrap_logo_bar {
-        display: flex;
-        align-items: center;
-        /* height: 200px; */
-        height: 50px;
-        overflow: hidden;
-    }
-
-    .slideshow_logo {
-        display: flex;
-        animation: loop-slide 20s infinite linear 1s both;
-    }
-
-    @keyframes loop-slide {
-        from {
-            transform: translateX(0);
-        }
-
-        to {
-            transform: translateX(-100%);
-        }
-    }
 
     .content {
         width: 200px;
         height: 160px;
     }
 
-    .content:nth-child(1) {
-        background-color: tomato;
-    }
-
-    .content:nth-child(2) {
-        background-color: orange;
-    }
-
-    .content:nth-child(3) {
-        background-color: blue;
-    }
-
-    .content:nth-child(4) {
-        background-color: green;
-    }
-
     /* /logo_bar */
-    /* news */
-    .news_area {
-        position: relative;
-    }
 
+    /* news */
     .news-contents {
         /* background-color: gray; */
         position: absolute;
@@ -1050,32 +966,21 @@ input::placeholder,textarea::placeholder{
     }
 
     .news_panel {
-        background-color: gold;
-        width: 130px;
-        text-align: center;
         margin-bottom: 50px;
-        padding: 5px;
         font-size: 20px;
         font-weight: 700;
     }
 
-    .bunsyou {
-        margin-top: 50px;
-        color: red;
-    }
-
     .news_img {
-        min-height: 520px;
-        width: 100%;
-        object-fit: cover;
         display: block;
     }
 
-    .absolute {
-        position: absolute;
+    /* news/スライドショー */
+    .flex_box {
+        display: flex;
+        margin: 25px;
     }
 
-    /* スライドショー */
     .swiper {
         height: 500px;
         width: 700px;
@@ -1096,120 +1001,42 @@ input::placeholder,textarea::placeholder{
     .swiper-slide .slide-content h1,
     .swiper-slide .slide-content h2,
     .swiper-slide .slide-content h3 {
-        color: black;
-        font-size: 30px;
-        text-shadow: 2px 2px rgba(0, 0, 0, 0.3);
         margin-bottom: 50px;
-        text-decoration: underline;
-        text-decoration-color: black;
     }
 
     .swiper-slide .slide-content .slide-p {
-        color: black;
-        /* text-shadow: .5px .5px rgba(0, 0, 0, 0.6); */
         margin-bottom: 25px;
-        font-size: 18px;
     }
 
     .swiper-slide .slide-content .caption {
-        position: absolute;
-        bottom: 30px;
         right: 30px;
-        color: #FFF;
-        font-size: 16px;
-        background-color: rgba(0, 127, 127, 0.5);
-        padding: 3px 8px;
-    }
 
-    .swiper-button-prev,
-    .swiper-button-next {
-        position: relative;
-        height: 0px;
-        width: 40px;
-    }
-
-    .swiper-button-prev {
-        left: 0px;
-        margin-right: 25px;
-    }
-
-    .swiper-button-next {
-        right: 0px;
-        margin-left: 25px;
     }
 
     .swiper-button-prev::after,
     .swiper-button-next::after {
-        background-repeat: no-repeat;
-        background-size: contain;
-        content: "";
-        height: 40px;
-        margin: auto;
-        width: 40px;
         visibility: visible;
     }
 
-    .flex_box {
-        display: flex;
-        align-items: center;
-        margin: 25px;
-    }
+    /* /news/スライドショー */
 
-    /* /スライドショー */
     /* /news */
+
     /* 採用情報 */
-    .recruit_area {}
-
     .recruit_area li {
-        list-style-type: disc;
-        /* リストの左側に黒丸 */
-        margin-left: 24px;
-        /* リストの左側に余白 */
-        text-align: left;
         font-size: 18px;
-    }
-
-    .title-fonts {
-        font-size: 24px;
-        font-weight: bold;
-        line-height: 60px;
-    }
-
-    .default-fonts {
-        font-size: 18px;
-        line-height: 30px;
-    }
-
-    .small-fonts {
-        font-size: 12px;
-        line-height: 25px;
     }
 
     .recruit_info {
-        display: flex;
-        gap: 25px;
-        margin: auto;
         justify-content: center;
     }
 
-    .column {
-        display: flex;
-        flex-flow: column;
-        gap: 25px;
-    }
-
     .treatment {
-        border-width: 2px;
-        border-color: #F0F0F0;
-        max-width: 700px;
         font-size: 18px;
     }
 
     .title {
-        background-color: #F0F0F0;
-        text-align: center;
         padding: 25px;
-        font-weight: 700;
         font-size: 20px;
     }
 
@@ -1217,112 +1044,21 @@ input::placeholder,textarea::placeholder{
         padding: 25px;
     }
 
-    .list {
-        list-style: inside;
-    }
-
     .t_text>p,
     .t_text>li {
         line-height: 200%;
     }
 
-    .t_text>li {
-        margin-left: 0;
-    }
-
-    .bold {
-        font-weight: 700;
-    }
-
-    .small {
-        font-size: 12px;
-    }
-
-    .para {
-        font-size: 15px;
-    }
-
     /* /採用情報 */
-    /* 行動指針 */
-    .guidelines_title {
-        font-size: 24px;
-        margin-top: 10px;
-        margin-bottom: 15px;
-        font-weight: bold;
-    }
 
-    .guidelines_explanation {
-        font-size: 18px;
-        line-height: 30px;
-    }
+    /* 行動指針 */
 
     /* /行動指針 */
+
     /* 採用スケジュール */
-    .flow_area {
-        background-color: #fecf5b;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .flow_bar {
-        display: flex;
-        margin: auto;
-        margin-bottom: 25px;
-        align-items: center;
-        width: 100%;
-        justify-content: space-between;
-        max-width: 1150px;
-    }
-
-    .flow_box {
-        position: relative;
-        display: inline-block;
-        color: #333;
-        text-decoration: none;
-        /* margin: 25px; */
-        text-align: center;
-        /* height: 150px;
-    width: 150px; */
-        border-radius: 50%;
-    }
-
-    /* .flow_box::after {
-    content: '';
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 10px 10px 10px 10px;
-    border-color: transparent transparent transparent #333;
-    position: absolute;
-    top: 50%;
-    margin-top: auto;
-    left: 195px;
-} */
-    /* .flow_box:last-child::after {
-    display: none;
-} */
     .step_background {
-        position: absolute;
-        background-color: #d9a31d;
-        border-radius: 50%;
         height: 60px;
         width: 60px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: auto;
-        left: 0;
-        right: 0;
-        z-index: 2;
-        top: -25px;
-    }
-
-    .triangle {
-        width: 0;
-        height: 0;
-        border-style: solid;
-        border-width: 10px 0 10px 10px;
-        border-color: transparent transparent transparent #000000;
     }
 
     .step {
@@ -1331,78 +1067,35 @@ input::placeholder,textarea::placeholder{
     }
 
     .svg_background {
-        position: relative;
-        background-color: #ffe7ae;
-        border-radius: 50%;
         height: 200px;
         width: 200px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        /* margin-top: -20%; */
-        z-index: 1;
-        flex-direction: column;
     }
 
     .svg {
         width: 50%;
-        margin: auto;
-    }
-
-    .flow_text {
-        position: absolute;
-        /* margin-top: -15%; */
-        bottom: 10px;
-        z-index: 2;
     }
 
     /* /採用スケジュール */
+
     /* 会社概要 */
     .corp_info {
         display: flex;
-        gap: 25px;
-        margin: auto;
-        justify-content: center;
-    }
-
-    .table {
-        margin: auto;
-        border-collapse: collapse;
-        border-color: black;
-        border-width: 1px;
-        border-style: solid;
-    }
-
-    th,
-    td {
-        border: solid 1px #333;
-        padding: 25px
-    }
-
-    th {
-        background-color: #cccccc;
-    }
-
-    td {
-        vertical-align: middle;
-        line-height: 200%;
     }
 
     .right {
-        text-align: center;
-        vertical-align: middle;
         font-size: 20px;
     }
 
     .iframe_area {
         height: initial;
+    }
 
+    .ue {
+        align-items: flex-start;
     }
 
     .iframe {
-        width: 100%;
         height: 500px;
-        border: 0;
     }
 
     .width {
@@ -1410,33 +1103,14 @@ input::placeholder,textarea::placeholder{
         flex-grow: 1;
     }
 
-    .ue {
-        align-items: flex-start;
-    }
-
-    .insta_area {
-        /* background-color: orange;
-        height: 29%;
-        width: 100%; */
-        /* grid-template-columns: 50% 50%; */
-
-    }
-
-    .bbb {
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-
     .link_img {
         height: 500px;
-        width: 100%;
+
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         position: absolute;
     }
-
 
     .itemA {
         grid-row: 1 / 3;
@@ -1454,19 +1128,12 @@ input::placeholder,textarea::placeholder{
     }
 
     /* /会社概要 */
-    /* フォーム */
-    /* /フォーム */
-    /* フッター */
-    .cmark {
-        text-align: center;
-        color: rgba(59, 59, 59, 1);
-    }
 
-    .copy {
-        margin-top: 30px;
-        font-size: 10px;
-        margin-bottom: 5px;
-    }
+    /* フォーム */
+    
+    /* /フォーム */
+
+    /* フッター */
 
     /* /フッター */
 }
