--- a/css/top.css
+++ b/css/top.css
@@ -4,6 +4,7 @@ body {
     --swiper-navigation-size: 0px;
     font-family: 'meiryo', cursive;
     font-size: 18px;
+    min-width: 270px;
 }
 
 .margin {
@@ -211,7 +212,7 @@ li.item>a {
 }
 
 .swiper {
-    height: 350px;
+    height: 450px;
     width: 100%;
 }
 
@@ -285,6 +286,14 @@ li.item>a {
 
 .swiper-button-next::after {
     background-image: url("../img/04_next.svg");
+}
+
+/* ページネーション */
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+  bottom: 0px;
 }
 
 
@@ -884,6 +893,12 @@ textarea::placeholder {
         transform: translateX(0);
     }
 }
+@media screen and (min-width:365px) {
+    .swiper {
+        height: 350px;
+        width: 100%;
+    }    
+}
 
 
 /* タブレット */
@@ -1130,7 +1145,7 @@ textarea::placeholder {
     /* /会社概要 */
 
     /* フォーム */
-    
+
     /* /フォーム */
 
     /* フッター */
